<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.StudentSignUpFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text ="Fill The Detais of Your Orphanage"
                android:textSize="24sp"
                android:gravity="center_horizontal"
                android:textStyle="bold|italic"
                android:textColor="@color/colorPrimaryDark"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/orphanage_name"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/orphanage_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/address"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintAnimationEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mob_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/list_of_problems"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintAnimationEnabled="false"
                    android:id="@+id/list_of_problems_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/add_list_of_problems">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/list_of_problems"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/add_list_of_problems"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/list_of_problems_parent"
                    android:src="@drawable/add_image_button"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_of_problems_rv"
                android:layout_width="match_parent"
                android:layout_height="120dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_of_children"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/no_of_children_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/list_of_co_founders"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintAnimationEnabled="false"
                    android:id="@+id/list_of_co_founders_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/add_co_founder_imgBtn">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/list_of_co_founders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />


                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/add_co_founder_imgBtn"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/list_of_co_founders_parent"
                    android:src="@drawable/add_image_button"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:id="@+id/list_of_co_founders_rv" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/funding_deficit"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/funding_deficit_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>